# opensearch-logger

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  LICENSE.md  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
elasticecslogging/: handlers.py  serializers.py
mappings/: ecs1.4.0_compatible_full.json  ecs1.4.0_compatible_minimal.json
opensearch_logger/: __init__.py  ecs_handlers.py  handlers.py  serializers.py  version.py
opensearch_logger/handlers/: __init__.py  base.py  elasticsearch.py  opensearch.py
tests/: __init__.py  start-opensearch-docker.sh  stop-opensearch-docker.sh  test_elasticecshandler.py  test_elasticecsserializer.py  test_handler.py  test_integration.py  test_integration_elasticsearch.py  test_integration_opensearch.py  test_serializer.py
travis/: run_es_docker.sh
