[tool.poetry]
name = "opensearch-logger"
version = "0.1.0"

authors = ["vduseev <vagiz@duseev.com>", "IMInterne <equipe_interne@innovmetric.com>"]
maintainers = ["vduseev <vagiz@duseev.com>"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: System :: Logging",
  "Topic :: Software Development :: Libraries",
  "Topic :: Internet :: Log Analysis",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
]
description = "OpenSearch logging handler"
keywords = ["opensearch", "logging", "handler", "logger"]

documentation = "https://github.com/vduseev/python-opensearch-logger"
homepage = "https://github.com/vduseev/python-opensearch-logger"
repository = "https://github.com/vduseev/python-opensearch-logger"

license = "Apache-2.0"
readme = "README.md"

packages = [
  {include = "opensearch_logger"},
]

[tool.poetry.dependencies]
opensearch-py = "^1.0.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
bump2version = "^1.0.1"
flake8 = "^4.0.1"
flake8-blind-except = "^0.2.0"
flake8-bugbear = "^21.9.2"
flake8-comprehensions = "^3.7.0"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-polyfill = "^1.0.2"
ipython = "^7.29.0"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.0.7"
pytest-mock = "^3.6.1"
pytest-mypy = "^0.8.1"
radon = "^5.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 120
