[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensearch-logger"
version = "1.3.0"
description = "OpenSearch logging handler"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.md" }
keywords = ["opensearch", "logging", "handler", "logger"]
authors = [
  {name = "vduseev", email = "vagiz@duseev.com"},
  {name = "IMInterne", email = "equipe_interne@innovmetric.com"},
]
maintainers = [{name = "vduseev", email = "vagiz@duseev.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: System :: Logging",
  "Topic :: Software Development :: Libraries",
  "Topic :: Internet :: Log Analysis",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["opensearch-py"]

[project.urls]
documentation = "https://github.com/vduseev/opensearch-logger"
homepage = "https://github.com/vduseev/opensearch-logger"
repository = "https://github.com/vduseev/opensearch-logger"

[project.optional-dependencies]
dev = [
  "bump2version",
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-mypy",
]

[tool.black]
line-length = 78

[tool.coverage]
fail_under = 95

[tool.coverage.run]
branch = true
source = [
    "opensearch_logger"
]
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 78

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
]
ignore = [
    "D202",  # No blank lines allowed after function docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"
